--- a/css/resume.css
+++ b/css/resume.css
@@ -32,3 +32,31 @@ h1{
 font-family: cookie, cursive;
 
 }
+
+h4,h2 {
+	color:#272064;
+	font-style:italic;
+
+}
+
+.foot {
+	text-align:center;
+}
+
+footer li{	
+	float:left;
+	list-style-type:none;
+	text-align:center;
+	padding:0 7em;	
+}
+
+
+.facebook{
+	grid-column:1;
+}
+.Linkedin{
+	grid-column:2;
+}
+.git{
+	grid-column:3;
+}
