--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,7 +1,8 @@
-@media only screen and (max-width:540px){
+@media only screen and (max-width:440px){
 	#wrapper{
 			float:none;
 			clear:none;
+			display:block;
 			width:100%;		
 			font-size:10px;
 			}
@@ -10,6 +11,13 @@
 	}
 	h4{
 		text-align:center;
+	}
+
+	footer li{
+		float:none;
+	list-style-type:none;
+	text-align:center;
+	padding:0 7em;
 	}
 
 }
