--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width:440px){
+@media only screen and (max-width:660px){
 	#wrapper{
 			float:none;
 			clear:none;
@@ -7,10 +7,16 @@
 			font-size:10px;
 			}
 	.photo{
-		width:100px;
+		width:90px;
+			left:75%;
+
 	}
 	h4{
 		text-align:center;
+	}
+
+	h2{
+		font-size:0.9em;
 	}
 
 	footer li{
